syntax="proto3";

import "google/protobuf/timestamp.proto";

package events;

message ARPEntry {
  bytes ip_addr = 1;
  bytes mac_address = 2;
  string device = 3;
}

message ARPTable {
  string device_sn = 1;
  google.protobuf.Timestamp timestamp = 2;
  repeated ARPEntry entry = 3;
}
